More tweaks to RipleyServer.vcproj for building Ripley

--- a/Main/Source/Ripley/RipleyServer.vcproj
+++ b/Main/Source/Ripley/RipleyServer.vcproj
@@ -189,20 +189,21 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="&#x0D;&#x0A;"
 				AdditionalDependencies="odbc32.lib odbccp32.lib mysqlclient.lib profileapi\profileapi\debug\profileapi_d.lib $(OutDir)\ripleycored.lib version.lib"
-				OutputFile=".\Debug/RipleyServer.dll"
+				ShowProgress="2"
+				OutputFile="$(OutDir)\RipleyServer.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories=".\Debug;profileapi\profileapi\Debug;mysql\lib\opt"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;profileapi\profileapi\Debug;mysql\lib\opt"
 				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile=".\RipleyServer.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/RipleyServer.pdb"
+				ProgramDatabaseFile="$(OutDir)\RipleyServer.pdb"
 				SubSystem="2"
 				EntryPointSymbol=""
 				ResourceOnlyDLL="false"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\Debug/RipleyServer.lib"
+				ImportLibrary="$(OutDir)\RipleyServer.lib"
 				TargetMachine="1"
 			/>
 			<Tool
