adding more missing schemas...

--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -68,6 +68,8 @@
   </Target>
   -->
   <ItemGroup>
+    <None Include="ActionResult.xsd" />
+    <None Include="AddedNode.xsd" />
     <None Include="AllocateSubs.xsd">
       <SubType>
       </SubType>
