I found a few more places that refered to a Debug folder.  Changed these to $(OutDir)

--- a/Main/Source/Ripley/RipleyServer.vcproj
+++ b/Main/Source/Ripley/RipleyServer.vcproj
@@ -165,10 +165,10 @@
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderThrough="ripleyserverstdafx.h"
-				PrecompiledHeaderFile=".\Debug/RipleyServer.pch"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/ripleyserver.pdb"
+				PrecompiledHeaderFile="$(OutDir)/RipleyServer.pch"
+				AssemblerListingLocation="$(OutDir)/"
+				ObjectFile="$(OutDir)/"
+				ProgramDataBaseFileName="$(OutDir)/ripleyserver.pdb"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
