--- a/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
+++ b/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
@@ -45,6 +45,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -140,7 +141,6 @@
     <Compile Include="ReviewForumPageTests.cs" />
     <Compile Include="SubEditorAllocationTest.cs" />
     <Compile Include="CreateNewUserProcedureTests.cs" />
-    <Compile Include="DnaIdentityWebServiceTests.cs" />
     <Compile Include="DynamicListsTests.cs" />
     <Compile Include="HierarchyPageTests.cs" />
     <Compile Include="KeyValueDataTests.cs" />
