More tweaks to projects settings to get release builds going

--- a/Main/Source/Ripley/RipleyServer.vcproj
+++ b/Main/Source/Ripley/RipleyServer.vcproj
@@ -65,10 +65,10 @@
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderThrough="ripleyserverstdafx.h"
-				PrecompiledHeaderFile=".\Release/RipleyServer.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				PrecompiledHeaderFile="&quot;$(OutDir)&quot;/RipleyServer.pch"
+				AssemblerListingLocation="&quot;$(OutDir)&quot;/"
+				ObjectFile="&quot;$(OutDir)&quot;/"
+				ProgramDataBaseFileName="&quot;$(OutDir)&quot;/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 			/>
@@ -86,17 +86,17 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="mfcs90.lib Wininet.lib odbc32.lib odbccp32.lib ws2_32.lib mysqlclient.lib rpcrt4.lib profileapi_r.lib ripleycore.lib version.lib msvcrt.lib"
-				OutputFile=".\Release/RipleyServer.dll"
+				OutputFile="&quot;$(OutDir)&quot;/RipleyServer.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories=".\lib;profileapi\profileapi\Release;c:\mysql\lib\opt;profileapi\crypt\Release"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;profileapi\profileapi\Release;mysql\lib\opt"
 				IgnoreDefaultLibraryNames="mfcs71.lib;msvcrt.lib"
 				ModuleDefinitionFile=".\RipleyServer.def"
-				ProgramDatabaseFile=".\Release/RipleyServer.pdb"
+				ProgramDatabaseFile="&quot;$(OutDir)&quot;/RipleyServer.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\Release/RipleyServer.lib"
+				ImportLibrary="&quot;$(OutDir)&quot;/RipleyServer.lib"
 				TargetMachine="1"
 			/>
 			<Tool
