--- a/Main/Source/Shared/Memcached.ClientLibrary/Memcached.ClientLibrary.csproj
+++ b/Main/Source/Shared/Memcached.ClientLibrary/Memcached.ClientLibrary.csproj
@@ -34,7 +34,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\2.0\Release\</OutputPath>
+    <OutputPath>..\..\Reference DLLs\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
