--- a/Main/Source/Ripley/ripleycore.vcproj
+++ b/Main/Source/Ripley/ripleycore.vcproj
@@ -59,9 +59,9 @@
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile="&quot;$(OutDir)&quot;/ripleycore.pch"
-				AssemblerListingLocation="&quot;$(OutDir)&quot;/"
-				ObjectFile="&quot;$(OutDir)&quot;/"
-				ProgramDataBaseFileName="&quot;$(OutDir)&quot;/"
+				AssemblerListingLocation=".\Release/"
+				ObjectFile=".\Release/"
+				ProgramDataBaseFileName=".\Release/ripleycore.pdb"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="0"
