--- a/Main/Source/Ripley/ripleycore.vcproj
+++ b/Main/Source/Ripley/ripleycore.vcproj
@@ -58,7 +58,7 @@
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile="&quot;$(OutDir)&quot;/ripleycore.pch"
+				PrecompiledHeaderFile="&quot;$(OutDir)&quot;ripleycore.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/ripleycore.pdb"
