--- a/Main/Source/Ripley/ripleycore.vcproj
+++ b/Main/Source/Ripley/ripleycore.vcproj
@@ -59,9 +59,9 @@
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile="&quot;$(OutDir)/ripleycore.pch&quot;"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/ripleycore.pdb"
+				AssemblerListingLocation="&quot;$(OutDir)&quot;"
+				ObjectFile="&quot;$(OutDir)&quot;"
+				ProgramDataBaseFileName="&quot;$(OutDir)ripleycore.pdb&quot;"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="0"
