--- a/Main/Tests/Legacy Tests/RipleyTests/RipleyTests.csproj
+++ b/Main/Tests/Legacy Tests/RipleyTests/RipleyTests.csproj
@@ -72,6 +72,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
