--- a/Release/Source/Ripley/ripleycore.vcproj
+++ b/Release/Source/Ripley/ripleycore.vcproj
@@ -23,8 +23,8 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\Release\"
-			IntermediateDirectory=".\Release\"
+			OutputDirectory=".\Release"
+			IntermediateDirectory=".\Release"
 			ConfigurationType="4"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="2"
@@ -56,12 +56,12 @@
 				ExceptionHandling="2"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="0"
+				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile="&quot;$(OutDir)/ripleycore.pch&quot;"
-				AssemblerListingLocation="&quot;$(OutDir)&quot;"
-				ObjectFile="&quot;$(OutDir)&quot;"
-				ProgramDataBaseFileName="&quot;$(OutDir)ripleycore.pdb&quot;"
+				AssemblerListingLocation="$(OutDir)/"
+				ObjectFile="$(OutDir)/"
+				ProgramDataBaseFileName="&quot;$(OutDir)/ripleycore.pdb&quot;"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="0"
@@ -79,7 +79,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile=".\lib\ripleycore.lib"
+				OutputFile="$(OutDir)\ripleycore.lib"
 				SuppressStartupBanner="true"
 			/>
 			<Tool
