Changes to skin uploader to be able to upload to Live

--- a/Main/Tools/SkinManager/SkinManager/SkinManager.csproj
+++ b/Main/Tools/SkinManager/SkinManager/SkinManager.csproj
@@ -19,7 +19,11 @@
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-     <PublishUrl>J:\Projects\SkinManager\Release\</PublishUrl>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
+    <PublishUrl>J:\VP-DEV-DNA-1\User Services\Main\Tools\SkinManager\SkinManager\Publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
