Updates to handle change in event type for posting to a forum. Comment text now inserted in the event. Additionally refactored according to ReSharper recommendations.

--- a/Main/Source/Windows Services/DnaEventsService/SNeSActivityProcessor/SnesActivityProcessor.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/SNeSActivityProcessor/SnesActivityProcessor.csproj
@@ -98,6 +98,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentForumActivity.cs" />
+    <Compile Include="MessageBoardPostActivity.cs" />
     <Compile Include="OpenSocialActivity.cs" />
     <Compile Include="ISnesActivity.cs" />
     <Compile Include="CommentActivity.cs" />
