set db for smallguide

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
@@ -105,49 +105,7 @@
     <add name="DnaEventProcessorService.Properties.Settings.guideConnectionString"
       connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
+      connectionString="database=smallguide; server=vp-dev-dna-db1\dev; user id=ripley; password=b0x0ftr1cks; pooling=false" />
   </connectionStrings>
-  <applicationSettings>
-    <!--<DnaEventProcessingService.Properties.Settings>
-      <setting name="activityProcessingPeriod" serializeAs="String">
-        <value>2000</value>
-      </setting>
-      <setting name="snesBaseUri" serializeAs="String">
-        <value>https://api.test.bbc.co.uk/social/social/rest</value>
-      </setting>
-      <setting name="certificateName" serializeAs="String">
-        <value>DNA</value>
-      </setting>
-      <setting name="proxyAddress" serializeAs="String">
-        <value>http://www-cache.reith.bbc.co.uk:80</value>
-      </setting>
-    </DnaEventProcessingService.Properties.Settings>-->
-    <!--<SNeSEventProcessor.Properties.Settings>
-      <setting name="activityProcessingPeriod" serializeAs="String">
-        <value>2000</value>
-      </setting>
-      <setting name="snesBaseUri" serializeAs="String">
-        <value>https://api.test.bbc.co.uk/social/social/rest</value>
-      </setting>
-      <setting name="certificateName" serializeAs="String">
-        <value>DNA</value>
-      </setting>
-      <setting name="proxyAddress" serializeAs="String">
-        <value>http://www-cache.reith.bbc.co.uk:80</value>
-      </setting>
-    </SNeSEventProcessor.Properties.Settings>-->
-    <!--<SNeSEventProcessorConsoleHost.Properties.Settings>
-      <setting name="activityProcessingPeriod" serializeAs="String">
-        <value>2000</value>
-      </setting>
-      <setting name="snesBaseUri" serializeAs="String">
-        <value>https://api.test.bbc.co.uk/social/social/rest</value>
-      </setting>
-      <setting name="certificateName" serializeAs="String">
-        <value>DNA</value>
-      </setting>
-      <setting name="proxyAddress" serializeAs="String">
-        <value>http://10.152.4.15:80</value>
-      </setting>
-    </SNeSEventProcessorConsoleHost.Properties.Settings>-->
-  </applicationSettings>
 </configuration>
