Change config to use sa for conn string.

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
@@ -106,6 +106,8 @@
       connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
-      connectionString="database=smallguide; server=vp-dev-dna-db1\dev; user id=ripley; password=b0x0ftr1cks; pooling=false" />
+      connectionString="database=smallguide; server=vp-dev-dna-db1\dev; user id=sa; password=b0x0ftr1cks; pooling=false" />
+    <!--<add name="DnaEventProcessorService.IntegrationTests.Properties.Settings.guideConnectionString"
+      connectionString="Data Source=.\SQLSERVER2005;Initial Catalog=TheGuide;Integrated Security=True" />-->
   </connectionStrings>
 </configuration>
