updatesp change to make it output a script file that can be used to deploy changes on other servers. The new version of updatesp.exe is  1.0.4.30070 The db csproj files supply a new attribute to <UpdateSpTask> called OutputScriptFile the provides the file name for the script file updatespBuildeConfigurations-Sample.config documents the changes to the format of this file

--- a/Main/Source/Databases/The Guide/DBUpgradeScript/DBUpgradeScript.csproj
+++ b/Main/Source/Databases/The Guide/DBUpgradeScript/DBUpgradeScript.csproj
@@ -29,7 +29,7 @@
   </PropertyGroup>
   <UsingTask TaskName="UpdateSpTask" AssemblyFile="..\updatesp.exe" />
   <Target Name="Build" Inputs="@(None)" Outputs="$(OutputTarget)">
-    <UpdateSpTask BuildFiles="@(None)" BuildTargetFile="$(OutputTarget)" UpdateSpBuildConfigFile="" BuildConfig="$(Configuration)" />
+    <UpdateSpTask BuildFiles="@(None)" OutputScriptFile="$(OutputPath)$(MSBuildProjectName)-Script.sql" BuildTargetFile="$(OutputTarget)" UpdateSpBuildConfigFile="" BuildConfig="$(Configuration)" />
   </Target>
   <Target Name="Clean">
     <Delete Files="$(OutputTarget)" TreatErrorsAsWarnings="true" />
