--- a/Main/Source/Databases/The Guide/updatespBuildConfigurations-Sample.config
+++ b/Main/Source/Databases/The Guide/updatespBuildConfigurations-Sample.config
@@ -4,16 +4,19 @@
 	The <buildConfiguration> tells updatesp where to find the updatesp.config file that should
 	be used in relation to a build configuration, such as Debug, Release, etc.
 	
+	The 'tfsBuildDefinition' attribute of <buildConfiguration> is currently not used, and
+	should be set to ""
+	
 	You can use relative or absolute paths.  Relative paths will be relative to the 
 	project file that started the updatesp task.
 	
 	-->
 	
-	<buildConfiguration name="Debug">
+	<buildConfiguration tfsBuildDefinition="" buildConfiguration="Debug">
 		<updatespConfigFile>..\updatesp.config</updatespConfigFile>
 	</buildConfiguration>
 	
-	<buildConfiguration name="DebugSmallGuide">
+	<buildConfiguration tfsBuildDefinition="" buildConfiguration="DebugSmallGuide">
 		<updatespConfigFile>..\updatespSmallGuide.config</updatespConfigFile>
 	</buildConfiguration>
 	
