--- a/Release/Source/Ripley/RipleyServer.rc
+++ b/Release/Source/Ripley/RipleyServer.rc
@@ -67,8 +67,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 3,4,6,
- PRODUCTVERSION 3,4,6,
+ FILEVERSION 3,4,6,0
+ PRODUCTVERSION 3,4,6,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
