--- a/Release/Source/Ripley/RipleyServer.rc
+++ b/Release/Source/Ripley/RipleyServer.rc
@@ -1,4 +1,4 @@
-﻿// Microsoft Visual C++ generated resource script.
+// Microsoft Visual C++ generated resource script.
 //
 #include "resource.h"
 
@@ -67,8 +67,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 3,4,6,1
- PRODUCTVERSION 3,4,6,1
+ FILEVERSION 3,4,6,0
+ PRODUCTVERSION 3,4,6,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
