--- a/Release/Source/Ripley/RipleyServer.rc
+++ b/Release/Source/Ripley/RipleyServer.rc
@@ -85,12 +85,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "BBC"
             VALUE "FileDescription", "RipleyServer Internet Server Extension Module"
-            VALUE "FileVersion", "3, 4, 6, 0"
+            VALUE "FileVersion", "3,4,6,0"
             VALUE "InternalName", "RIPLEYSERVER"
             VALUE "LegalCopyright", "Copyright (C) 2010 BBC"
             VALUE "OriginalFilename", "RIPLEYSERVER.DLL"
             VALUE "ProductName", "RipleyServer Internet Server Extension"
-            VALUE "ProductVersion", "3, 4, 6, 0"
+            VALUE "ProductVersion", "3,4,6,0"
         END
     END
     BLOCK "VarFileInfo"
