updatesp version 1.0.5.x Implements storing the object def in the target database, so that it can skip updates if it gets asked to apply the same script more than once.
DataReader.cs
* Added the ability to pass in a list of SqlParameters to several methods

DbObject.cs
* Renamed ObjName to DbObjName

New class: DbObjectDefinitions - handles the storing and comparing of the scripts that define objects that updatesp handles.

DBUpgradeScriptDbObject.cs
FunctionDbObject.cs
ProcedureDbObject.cs
TriggerDbObject.cs
ViewDbObject.cs
*  Implements the new DbObjType property

updatemain.cs
* Operates in the same was as the UpdateSPTask interface, so it's better for testing how MSBuild will interact with the new code

UpdateSpTask.cs
* Removed code that used to check for time stamps on files and objects in the db
* Uses the db object definitions class to determine if the definition of the object has changed in the target, and if so, update it

--- a/Main/Tools/UpdateSp/updatesp.csproj
+++ b/Main/Tools/UpdateSp/updatesp.csproj
@@ -114,6 +114,7 @@
     <Compile Include="DataReader.cs" />
     <Compile Include="DbObject.cs" />
     <Compile Include="FunctionDbObject.cs" />
+    <Compile Include="DbObjectDefintions.cs" />
     <Compile Include="ProcedureDbObject.cs" />
     <Compile Include="DBUpgradeScriptDbObject.cs" />
     <Compile Include="ScriptFile.cs" />
@@ -123,7 +124,7 @@
     </Compile>
     <Compile Include="UpdateSpTask.cs" />
     <Compile Include="ViewDbObject.cs" />
-    <None Include="updatesp.config" />
+    <None Include="updatesp-Sample.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
